contrast fixed

--- a/assignments/lesson2/css/medium.css
+++ b/assignments/lesson2/css/medium.css
@@ -4,7 +4,7 @@
   main {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-gap: 1em;
+    grid-gap: 2em;
   }
 
   .sec1 {
